# evolution_tank

./: .gitignore  BACKLOG.txt  CLAUDE.md  README.md  pyproject.toml
config/: settings.yaml
docs/: ARCHITECTURE.md  TEST_PLAN.md
src/evolution_tank/: __init__.py  __main__.py  config.py  demo.py  evolve.py
src/evolution_tank/analytics/: __init__.py  arms_race.py  collector.py  comm_tracker.py  diversity_tracker.py  fitness_tracker.py  lineage_tracker.py  trait_tracker.py  win_matrix.py
src/evolution_tank/evolution/: __init__.py  engine.py  fitness.py  mutation.py  selection.py
src/evolution_tank/simulation/: arena.py  combat.py  fog_of_war.py  match.py  physics.py
src/evolution_tank/strategy/: __init__.py  actions.py  behavior_tree.py  composites.py  conditions.py  nodes.py  random_tree.py  serialization.py
src/evolution_tank/tanks/: tank.py
src/evolution_tank/visualization/: renderer.py
tests/: test_arena.py  test_combat.py  test_config.py  test_fog_of_war.py  test_match.py  test_physics.py  test_tank.py
tests/evolution/: test_evolution.py  test_fitness.py
tests/strategy/: test_behavior_tree.py
