[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-tank"
version = "0.1.0"
description = "2D tank battle simulation with evolutionary strategy"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
